# project-os

./: .gitignore  drizzle.config.ts  package-lock.json  package.json  start.bat  vite.config.ts
backend/: pom.xml
backend/src/main/resources/: application.yml
drizzle/: 0000_awesome_silverclaw.sql  0000_giant_wolfsbane.sql  0000_grey_fenris.sql  0001_nosy_callisto.sql  0002_unknown_whiplash.sql
drizzle/meta/: 0000_snapshot.json  0001_snapshot.json  0002_snapshot.json  _journal.json
electron/: main.ts  preload.ts
electron/db/: index.ts  project.repository.ts  research.repository.ts  schema.ts
infrastructure/: docker-compose.yml
project-os-ui/: index.html  package-lock.json  package.json
project-os-ui/src/: App.tsx
project-os-ui/src/features/architecture/api/: architectureApi.ts
project-os-ui/src/features/architecture/components/: ArchitectureCard.tsx  (+2 more)
project-os-ui/src/routes/: AppRoutes.tsx
project-os-ui/src/shared/layouts/: MainLayout.tsx
project-os-ui/src/shared/navigation/: Sidebar.tsx  navigationItems.ts
src/: App.tsx  main.tsx  vite-env.d.ts
src-tauri/: .gitignore  2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: db.rs  lib.rs  project_commands.rs
src/components/: ProjectDetails.tsx  ProjectList.tsx  ResearchTopics.tsx
src/db/: database.ts  initDatabase.ts
src/db/repositories/: projectRepository.ts
src/db/schema/: project.ts
src/features/projects/api/: projectApi.ts
src/features/projects/types/: Project.ts
src/styles/: global.css
src/types/: project.ts  question.ts  research-topic.ts
(+149 files in other folders)
